<resources>
    <string name="app_name">Sniff BT</string>
    <string name="app_tutorial">SniffBT Tutorial</string>

    <string name="text_list_paired_devices">Paired devices</string>
    <string name="text_list_discovered_devices">Discovered devices</string>

    <string name="intent_reason_alarm_receiver">Alarm Received</string>
    <string name="intent_reason_sniff_bt_devices">Sniff Devices</string>

    <string name="SH_PREF_Paired_Devices">PairedDevices</string>
    <string name="SH_PREF_Scan_Frequency_In_Seconds">ScanFrequency</string>
    <string name="SH_PREF_Sniff_BT_OnOff">SniffBTOnOff</string>
    <string name="SH_PREF_SniffBT_Tutorial_FirstStart">SniffBT_Tutorial_FirstStart</string>

    <string name="suggest_BT_On">Please turn on Bluetooth to view Paired and Available devices</string>

    <string name="settings_opt1">1 minute</string>
    <string name="settings_opt2">2 minutes</string>

    <string name="set_frequency_of_scan">Set the Frequency of Scan</string>
    <string name="font_path">font/RobotoTTF/Roboto-Light.ttf</string>

    <string name="pair_bt">Pair BT</string>
    <string name="unpair_bt">Unpair BT</string>

    <string name="app_shared_pref_filename">millennia.sniffbt.globalsharedpreferences</string>
    <string name="refresh">Refresh</string>
    <string name="paired_checkboxes">Paired Checkboxes</string>

    <string name="intro_tutorial_btn">Get Started</string>
    <!-- Slide 1 values -->
    <string name="slide1_title">Welcome to SniffBT</string>
    <string name="slide1_description">SniffBT lets you handle Bluetooth connections with external devices. SniffBT also manages day-to-day Bluetooth connectivity with your home and office devices.</string>

    <!-- Slide 2 values -->
    <string name="slide2_title">Manage Devices</string>
    <string name="slide2_description">Use this tab to Pair/Unpair Bluetooth devices to your phone.</string>

    <!-- Slide 3 values -->
    <string name="slide3_title">Set Search Frequency</string>
    <string name="slide3_description">Use this tab to set the frequency at which SniffBt searches for known Bluetooth devices.</string>

    <!-- Slide 4 values -->
    <string name="slide4_title">Control Connections</string>
    <string name="slide4_description">Use this tab to check (or uncheck) devices that SniffBT should automatically connect to (or disconnect), when they become available.</string>

    <!-- Slide 5 values -->
    <string name="slide5_title">Intelligent Design</string>
    <string name="slide5_description">If a Bluetooth device has been checked, SniffBT automatically turns on Bluetooth on your phone when that Bluetooth device becomes available. SniffBT also takes care of disconnecting a device, if unchecked.</string>

    <!-- Slide 6 values -->
    <string name="slide6_title">Turn On SniffBT</string>
    <string name="slide6_description">Hit the SniffBT button and enjoy.</string>

    <!-- Permissions Slide -->
    <string name="permissions_title">Requesting Permissions</string>
    <string name="permissions_description">SniffBT requires the phone\'s location information to accurately scan Bluetooth devices.</string>

</resources>
