<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="millennia.sniffbt.fragment.Settings">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/set_frequency_of_scan"
        android:id="@+id/tvFreqOfScan"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFreqOfScan">

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/freq_of_scan"
            android:layout_marginTop="@dimen/settings_default_entity_distance"
            android:layout_weight="2">

            <RadioButton
                android:id="@+id/rb_opt1"
                android:text="@string/settings_opt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginLeft="@dimen/settings_options_spacing"
                android:layout_weight="1"
                />

            <RadioButton
                android:id="@+id/rb_opt2"
                android:text="@string/settings_opt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginLeft="@dimen/settings_options_spacing"
                android:layout_weight="1"
                />

        </RadioGroup>
    </LinearLayout>

</RelativeLayout>
